2006-05-08 Paul Jakma <paul.jakma@sun.com>

	* ripng_routemap.c: (route_set_ipv6_nexthop_local_compile) bug
	  #242, s/in_addr/in6_addr to fix crash. 
	  Thanks to jithinvachery+quagga@gmail.com.

2006-01-19 Paul Jakma <paul.jakma@sun.com>

        * (general) various miscellaneous compiler warning fixes.
          Remove redundant break statements from switch clauses 
          which return. 
          return from main, not exit, cause it annoys SOS. 
          Remove stray semi-colons which cause empty-statement 
          warnings.

2005-10-01 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ripng_zebra.c: (ripng_redistribute_write) Remove local hard-coded
	  table str[].  Replace str[i] with new library function
	  zebra_route_string(i).
	* ripngd.c: Remove local hard-coded table route_info[].
	  (show_ipv6_ripng) Use new library function zebra_route_char() instead
	  of table route_info[].

2005-08-27 Hasso Tepper <hasso at quagga.net>

	* ripng_zebra.c, ripngd.[ch]: Pass metric info to the zebra daemon.

2005-04-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ripng_zebra.c (ripng_redistribute_unset, ripng_redistribute_clean):
	  Change 2nd arg to zebra_redistribute_send from zclient->sock
	  to zclient.

2005-04-08 Hasso Tepper <hasso at quagga.net>

	* ripngd.[hc], ripng_interface.c, ripng_peer.c: inet6_ntoa() takes
	  argument now by value.

2005-04-05 Hasso Tepper <hasso at quagga.net>

	* ripngd.[hc]: Remove inet6_ntop() and any usage of it. inet6_ntoa()
	  from lib is used now.
	* ripng_interface.c: inet6_ntop() -> inet6_ntoa().
	* ripng_peer.c: inet6_ntop() -> inet6_ntoa().

2005-04-02 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ripng_interface.c: (ripng_interface_delete) After deleting, set
	  ifp->ifindex to IFINDEX_INTERNAL.

2005-01-30 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ripng_interface.c: (ripng_multicast_join) Save errno before calling
	  ripngd_privs.change.
